# finalProj

./: CMakeLists.txt  main.c  snakefuncts.c  snakefuncts.h
